feat: set bundle config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,15 +17,10 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
     "declaration": true,
     "declarationDir": "dist/types"
   },
   "include": [
-    "src"
+    "src/cds"
   ],
 }
