--- a/package.json
+++ b/package.json
@@ -1,65 +1,18 @@
 {
   "name": "choekko-design-system",
+  "version": "0.0.3",
   "description": "Choekko Design System",
   "main": "index.tsx",
-  "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "bp": "./bundleHelper/publish.sh"
-  },
+  "module": "dist/index.js",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "author": "choekko",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
+    "@emotion/react": "^11.9.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@emotion/react": "^11.9.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/plugin-proposal-decorators": "^7.18.10",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@emotion/eslint-plugin": "^11.7.0",
-    "@emotion/styled": "^11.10.0",
-    "@types/node": "^16.11.33",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "typescript": "^4.6.4",
-    "babel-loader": "^8.2.5",
-    "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "dotenv-webpack": "^8.0.0",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-webpack-plugin": "^3.2.0",
-    "fork-ts-checker-webpack-plugin": "6.5.0",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "4",
-    "lint-staged": "^12.0.3",
-    "prettier": "^2.5.1",
-    "rollup": "^2.78.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
-    ]
+    "react-dom": "^18.0.0"
   }
 }
-
